--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-		"filsh/yii2-oauth2-server": "~2.0"
+		"filsh/yii2-oauth2-server": "~2.0",
+		"yiisoft/yii2-authclient": "~2.0.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
